@@ -1,11 +1,12 @@
 Package: gridSVG
 Title: Export grid graphics as SVG
-Version: 1.3-0
+Version: 1.3-1
 Authors@R: c(person("Paul", "Murrell", role = c("cre", "aut"),
                     email = "paul@stat.auckland.ac.nz"),
              person("Simon", "Potter", role = "aut",
                     email = "simon.potter@auckland.ac.nz"))
 Description: Export grid graphics as SVG
-Depends: R (>= 3.0), R (< 3.1), methods, grid, RJSONIO, XML
+Depends: R (>= 3.0), R (< 3.1)
+Imports: methods, grid, RJSONIO, XML
 Suggests: lattice
 License: GPL
